--- a/src/assets/scss/layout/_responsive.scss
+++ b/src/assets/scss/layout/_responsive.scss
@@ -46,6 +46,44 @@
             }
         }
     }
+    #home {
+        .hero {
+            .container {
+                .hero {
+                    &__textBox {
+
+                    }
+                    &__imgBox {
+                        img {
+                            &:first-child {
+                                width: 300px;
+                                height: auto;
+                            }
+                            &:nth-child(2) {
+                                top: 30px;
+                                right: 20px;
+                            }
+                            &:nth-child(3) {
+                                top: 50%;
+                                right: 0;
+                                transform: translate(calc(100% + 10px), -50%);
+                            }
+                            &:nth-child(4) {
+                                bottom: 30px;
+                                right: 20px;
+                            }
+                        }
+                        .btn {
+                            @include fontStyles(500, 1.6rem, 26px);
+                            width: 85px;
+                            height: 36px;
+
+                        }
+                    }
+                }
+            }
+        }
+    }
     #footer {
         .container {
             grid-template-columns: repeat(3, auto);
@@ -70,6 +108,9 @@
 
 // Small
 @media (max-width: 768px) {
+    .container {
+        max-width: calc(100vw - 36px);
+    }
     #topBar {
         position: relative;
         .container {
@@ -86,6 +127,7 @@
                     visibility: hidden;
                     .nav {
                         &__list {
+                            position: absolute;
                             opacity: 0;
                             visibility: hidden;
                             display: flex;
@@ -104,7 +146,7 @@
                             &__list {
                                 transform: translateX(0);
                                 transition: ease-out 0.8s;
-                                
+                                z-index: 2;
                                 opacity: 1;
                                 visibility: visible;
                             }
@@ -118,6 +160,70 @@
                     margin-left: auto;
                     span {
                         display: none;
+                    }
+                }
+            }
+        }
+    }
+    #home {
+        .hero {
+            .container {
+                margin-top: 60px;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1fr 1fr;
+                grid-gap: 0;
+                .hero {
+                    &__textBox {
+                        .hero {
+                            &__heading {
+                                margin: 10px 0 14px;
+                                @include h1-mb;
+                            }
+                            &__subHeading,
+                            &__desc {
+                                font-size: 1.4rem;
+                                line-height: 24px;
+                                max-width: 100%;
+                            }
+                        }
+                        .btn {
+                            margin-top: 34px;
+                        }
+                    }
+                    &__imgBox {
+                        display: flex;
+                        justify-content: center;
+                        img {
+                            &:first-child {
+                                width: 220px;
+                                height: 100%;
+                                transform: translate(-30px, 0);
+                            }
+                            &:not(:first-child) {
+                                width: 54px;
+                                height: auto;
+                            }
+                            &:nth-child(2) {
+                                top: 0;
+                                right: 50%;
+                                transform: translate(calc(50% + 90px) , 20px);
+                            }
+                            &:nth-child(3) {
+                                top: 50%;
+                                right: 50%;
+                                transform: translate(calc(50% + 120px) , -50%);
+                            }
+                            &:nth-child(4) {
+                                bottom: 0;
+                                right: 50%;
+                                transform: translate(calc(50% + 90px), -20px);
+                            }
+                        }
+                        .btn {
+                            bottom: 0;
+                            left: 50%;
+                            transform: translate(calc(-50% - 120px), -40px);
+                        }
                     }
                 }
             }
