--- a/src/assets/scss/utilities/_typography.scss
+++ b/src/assets/scss/utilities/_typography.scss
@@ -2,10 +2,10 @@
 @use "./mixins" as *;
 
 // Desktop heading
-%h1-dt {
+@mixin h1-dt {
     @include fontStyles(700, 11rem, 118px);
 }
-%h2-dt {
+@mixin h2-dt {
     @include fontStyles(500, 6.4rem, 74px);
 }
 %h3-dt {
@@ -16,7 +16,7 @@
 }
 
 // Mobile heading
-%h1-mb {
+@mixin h1-mb {
     @include fontStyles(700, 3.6rem, 52px);
 }
 %h2-mb {
