--- a/src/assets/scss/utilities/_typography.scss
+++ b/src/assets/scss/utilities/_typography.scss
@@ -11,16 +11,24 @@
 %h3-dt {
     @include fontStyles(500, 4rem, 50px);
 }
-%h4-dt {
+@mixin h4-dt {
     @include fontStyles(500, 3rem, 40px);
+}
+
+@mixin h5-dt {
+    @include fontStyles(500, 2.4rem, 34px);
 }
 
 // Mobile heading
 @mixin h1-mb {
     @include fontStyles(700, 3.6rem, 52px);
 }
-%h2-mb {
-    @include fontStyles(500, 3.6rem, 52px);
+@mixin h2-mb {
+    @include fontStyles(500, 3.6rem, 40px);
+}
+
+@mixin h3-mb {
+    @include fontStyles(500, 3.2rem, 32px);
 }
 
 // Text
