--- a/src/assets/scss/layout/_responsive.scss
+++ b/src/assets/scss/layout/_responsive.scss
@@ -155,6 +155,16 @@
                 }
             }
         }
+        .restaurantView {
+            .container {
+                .restaurantView {
+                    &__gallery {
+                        grid-template-columns: repeat(2, 1fr);
+                        grid-template-rows: repeat(4, 285px);
+                    }
+                }
+            }
+        }
     }
     #footer {
         .container {
@@ -339,6 +349,30 @@
                 grid-template-columns: repeat(1, 1fr);
                 grid-template-rows: auto;
                 height: auto;
+            }
+        }
+        .restaurantView {
+            .container {
+                .restaurantView {
+                    &__heading {
+                        @include h2-mb;
+                    }
+                    &__desc {
+                        margin-top: 20px;
+                        font-size: 1.4rem;
+                    }
+                    &__gallery {
+                        margin-top: 40px;
+                        grid-template-columns: repeat(1, 1fr);
+                        grid-template-rows: repeat(5, 265px);
+                        &-img {
+                            &:nth-child(2) {
+                                grid-row: initial;
+                                grid-column: initial;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
