--- a/src/pages/HomePage/RestaurantViewSection/RestaurantView.scss
+++ b/src/pages/HomePage/RestaurantViewSection/RestaurantView.scss
@@ -30,10 +30,30 @@
                         grid-row: 1 / -1;
                         grid-column: 2 / 3;
                     }
+                    &:last-child {
+                        display: none;
+                    }
                     img {
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
+                    }
+                }
+            }
+            &__dotSlide {
+                margin-top: 30px;
+                display: flex;
+                align-items: center;
+                gap: 8px;
+                .dot {
+                    width: 8px;
+                    height: 8px;
+                    border-radius: 50%;
+                    background-color: $linkColor;
+                    &.active {
+                        width: 18px;
+                        border-radius: 50px;
+                        background-color: $textColor;
                     }
                 }
             }
