--- a/src/assets/scss/layout/_responsive.scss
+++ b/src/assets/scss/layout/_responsive.scss
@@ -189,6 +189,30 @@
                 }
             }
         }
+        .dailyOffers {
+            .container {
+                .dailyOffers {
+                    &__main {
+                        .dailyOffers {
+                            &__food {
+                                gap: 20px;
+                                .food {
+                                    &__name,
+                                    &__price {
+                                        font-size: 2.2rem;
+                                        line-height: 24px;
+                                    }
+                                    &__desc {
+                                        font-size: 1.4rem;
+                                        line-height: 20px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
     #footer {
         .container {
@@ -440,6 +464,58 @@
                 }
             }
         }
+        .dailyOffers {
+            .container {
+                .dailyOffers {
+                    &__heading {
+                        @include h2-mb;
+                    }
+                    &__main {
+                        grid-template-rows: repeat(4, auto);
+                        grid-template-columns: 475px;
+                        justify-content: center;
+                        .dailyOffers {
+                            &__event {
+                                .content {
+                                    &__heading {
+                                        margin-top: 40px;
+                                        max-width: 150px;
+                                        font-size: 1.6rem;
+                                        line-height: 24px;
+                                        strong {
+                                            font-size: 5rem;
+                                            line-height: 1;
+                                        }
+                                    }
+                                    &__desc {
+                                        margin: 6px 0 22px;
+                                        font-size: 1.2rem;
+                                    }
+                                    .btn {
+                                        margin-bottom: 20px;
+                                        width: 90px;
+                                        height: 28px;
+                                        font-size: 1.2rem;
+                                    }
+                                }
+                            }
+                            &__food {
+                                flex-direction: column;
+                                .food {
+                                    &__img {
+                                        width: 100%;
+                                        height: 310px;
+                                    }
+                                    &__info {
+                                        gap: 10px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
     #footer {
         .container {
@@ -483,6 +559,24 @@
                             width: 100%;
                         }
 
+                    }
+                }
+            }
+        }
+        .dailyOffers {
+            .container {
+                .dailyOffers {
+                    &__main {
+                        grid-template-columns: 1fr;
+                        .dailyOffers {
+                            &__food {
+                                .food {
+                                    &__img {
+                                        height: 280px;
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
