--- a/src/pages/HomePage/BookingSection/Booking.scss
+++ b/src/pages/HomePage/BookingSection/Booking.scss
@@ -36,7 +36,7 @@
                         position: absolute;
                         top: 0;
                         right: 0;
-                        transform: translate(80%, -80%);
+                        transform: translate(0, -80%);
                         width: 100px;
                         height: auto;
                     }
@@ -77,7 +77,6 @@
                         flex-direction: column;
                         gap: 10px;
                         img {
-                            // background-color: red;
                             padding: 6px;
                             cursor: pointer;
                         }
