--- a/src/assets/scss/layout/_responsive.scss
+++ b/src/assets/scss/layout/_responsive.scss
@@ -213,6 +213,19 @@
                 }
             }
         }
+        .chefs {
+            .container {
+                .chefs {
+                    &__list {
+                        .chef {
+                            &__img {
+                                height: 300px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
     #footer {
         .container {
@@ -535,6 +548,32 @@
                 }
             }
         }
+        .chefs {
+            .container {
+                .chefs {
+                    &__heading {
+                        @include h2-mb;
+                    }
+                    &__desc {
+                        margin: 12px 0 30px;
+                        font-size: 1.4rem;
+                        line-height: 24px;
+                    }
+                    &__list {
+                        flex-direction: column;
+                        .chef {
+                            &__img {
+                                width: 475px;
+                                height: 560px;
+                            }
+                        }
+                    }
+                    &__decor {
+                        display: none;
+                    }
+                }
+            }
+        }
     }
     #footer {
         .container {
@@ -594,6 +633,20 @@
                                         height: 280px;
                                     }
                                 }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .chefs {
+            .container {
+                .chefs {
+                    &__list {
+                        .chef {
+                            &__img {
+                                width: 100%;
+                                height: 420px;
                             }
                         }
                     }
