updated HOME PAGE

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -19,6 +19,13 @@ a {
     color: inherit;
 }
 
+input {
+    font: inherit;
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
 .container {
     width: 1170px;
     max-width: calc(100vw - 48px);
