--- a/src/pages/HomePage/StatisticsSection/Statistics.scss
+++ b/src/pages/HomePage/StatisticsSection/Statistics.scss
@@ -2,7 +2,7 @@
 
 .statistics {
     position: relative;
-    margin: 70px 0 140px;
+    // margin: 0 140px;
     background:
         linear-gradient(
             to right,
